@@ -27,7 +27,7 @@
                     <artifactId>sac</artifactId>
                 </exclusion>   
             </exclusions>
-            <version>2.12.0</version>
+            <version>2.12.1</version>
         </dependency>
 
         <dependency>
@@ -162,11 +162,10 @@
                 <configuration>
                     <release>23</release>
                     <enablePreview>true</enablePreview>
-                    <!-- <compilerArgs>
-                       <arg>- -add-modules</arg>
+                    <!--<compilerArgs>
+                        <arg>- -add-modules</arg>
                         <arg>jdk.incubator.vector</arg>
-                        <arg>-XX:+EnableDynamicAgentLoading 
-                    </compilerArgs> -->
+                    </compilerArgs>-->
                 </configuration>
             </plugin>
         </plugins>
